2008-08-15  Néstor Salceda  <nestor.salceda@gmail.com>

	* InstantiateArgumentExceptionCorrectlyTest.cs: New. Unit tests for
	InstantiateArgumentExceptionCorrectlyRule.

2008-06-25  Sebastien Pouliot  <sebastien@ximian.com> 

	* DoNotThrowReservedExceptionTest.cs: New. Unit tests for
	DoNotThrowReservedExceptionRule.
	* Test.Rules.Exceptions.mdp: Update MD project file.

2008-05-26  Daniel Abramov  <ex@vingrad.ru>

	* AvoidThrowingBasicExceptionsTest.cs: New. Unit tests for 
	AvoidThrowingBasicExceptionsRule.
	* Test.Rules.Exceptions.mdp, Tests.Rules.Exceptions.csproj:
	Update project files.

2008-04-26  Sebastien Pouliot  <sebastien@ximian.com> 

	* MissingExceptionConstructorsTest.cs: New. Unit tests for 
	MissingExceptionConstructorsRule.

2008-04-26  Sebastien Pouliot  <sebastien@ximian.com>

	* ExceptionShouldBeVisibleTest.cs: New. Unit tests for 
	ExceptionShouldBeVisibleRule.

2008-04-06  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidArgumentExceptionDefaultConstructorTest.cs: New. Unit tests
	for AvoidArgumentExceptionDefaultConstructorRule.
	* Test.Rules.Exceptions.mdp: Add tests to MD project file.

2008-04-06  Sebastien Pouliot  <sebastien@ximian.com>

	* DontDestroyStackTraceTest.cs: Rename to DoNotDestroyStackTrace
	[Rule|Test]

2008-02-15  Sebastien Pouliot  <sebastien@ximian.com>

	* DontDestroyStackTraceTest.cs: (renamed from TestPatterns.cs)
	* DontSwallowErrorsCatchingNonspecificExceptionsTest.cs:
		Update unit tests wrt framework changes.

2007-10-07  Sebastien Pouliot  <sebastien@ximian.com>

	* Test.Rules.Exeptions.mdp: Update project file.

2007-09-24  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* DontSwallowErrorsCatchingNonspecificExceptionsTest.cs:  Change rule
	name for adhere to coding guidelines.  With this change, the rule
        information in the xml file will be shown.

2007-09-01  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* DontSwallowErrorsCatchingNonspecificExceptionsTest.cs: New.  Unit